--- a/plasma/src/main/res/values/strings.xml
+++ b/plasma/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="app_name">Plasma!</string>
     <string name="wallpaper_description">A nice plasma animation</string>
     <string name="wallpaper_label">Plasma!</string>
+    <string name="set_wallpaper">Set as Wallpaper</string>
+    <string name="settings">Settings...</string>
+    <string name="more">More...</string>
 </resources>
